test/compile_error/typemismatch.conf.3.def
config type_mismatch_conf {
	enum foo_t { FOO, BAR, BAZ }
	foo : int(FOO);
}
